frontend/src/modules/FilterBar/FilterBar.module.css
.outer-container {
  display: flex;
  flex-direction: row;
  align-items: center;
  justify-content: space-between;
}

.inner-container {
  display: flex;
  justify-content: space-between;
}

.input-container {
  display: flex;
  flex-direction: row;
  height: 35px;
  padding: 33px 20px;
}

.input {
  text-align: center;
  font-family: Futura, "Trebuchet MS", Arial, sans-serif;
  font-size: 15px;
  padding: 10px 0px;
  width: 170px;
  border-style: solid;
  border-color: grey;
  border-width: 1px;
}

.input-container-calendar {
  display: flex;
  flex-direction: row;
  height: 35px;
  padding: 33px 20px 0px;
}

.input-calendar {
  text-align: center;
  font-family: Futura, "Trebuchet MS", Arial, sans-serif;
  font-size: 15px;
  padding: 10px 0px;
  width: 170px;
  border-style: solid;
  border-color: grey;
  border-width: 1px;
}

.calendar-container {
  display: flex;
  flex-direction: column;
}

.calendar {
  width: 20px;
  height: 19px;
  padding:8px;
  background-color: #7A4938;
}

.calendar-subtitle {
  font-size: 11px;
  color: grey;
  width: 210px;
  padding: 5px 20px 0px;
  margin: 0px;
}

.clothes-hanger {
  width: 25px;
  height: 19px;
  padding: 8px;
  background-color: #7A4938;
  cursor: pointer;
}

.magnifying-glass {
  width: 20px;
  height: 19px;
  padding: 8px;
  background-color: #7A4938;
}

.icons-container {
  display: flex;
  flex-direction: row;
}

.filter-button-container {
  padding: 10px 20px 0px 10px;

}

.filter-button {
  cursor: pointer;
  background-color: #7A4938;
  padding: 8px;
  width: 25px;
  height: auto;
}

.heart-container {
  text-align: center;
  padding: 10px 20px 0px 10px;
}

.heart-subtitle {
  font-size: 11px;
}

.heart {
  cursor: pointer;
  width: 25px;
  height: auto;
}

.box-container {
  text-align: center;
  padding: 9px 20px 0px 0px;
}

.box {
  width: 25px;
  height: auto;
}

.box-subtitle {
  font-size: 11px;
}

.dropdown-wrapper {
  flex-grow: 2;
  flex-basis: 100%;
  text-align: center;
}

.dropdown {
  position: relative;
  display: inline-block;
}

.dropdown-icon {
  width: 15px;
  height: auto;
  margin-right: 7px;
}

.dropdown-label {
  color: grey;
}

.dropdown-items {
  display: none;
  width: 140px;
  border: 1px solid #B8B8B8;
  position: absolute;
  top: calc(100% + 10px);
  margin: 0;
  padding: 20px;
  left: 0;
  text-align: left;
  background-color: white;
}

.dropdown-item {
  list-style: none;
  margin: 0;
  padding: 0;
  text-indent: 0;
  list-style-type: 0;
  margin-bottom: 5px;
}

.dropdown-item:last-child {
  margin-bottom: 0;
}

.dropdown-item:hover, .dropdown-label:hover {
  color: #7A4938;
  cursor: pointer;
}

.dropdown-open {
  display: block;
}

